--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,6 @@
     --shadow-text: 1px 1px 3px #101010;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --color-background: #101010;
-        --color-text: #b6b0b8;
-        --color-accent: #aa75ff;
-        --color-disabled: #555;
-    }
-    select option {
-        background-color: #333;
-    }
-    .header-title h1 {
-        font-weight: 600;
-        letter-spacing: 0.1rem;
-    }
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -46,7 +30,7 @@ a {
 }
 
 main {
-    margin: 0 5rem 1rem 5rem;
+    padding: 0 5rem 1rem 5rem;
 }
 
 .material-symbols-outlined {
@@ -134,11 +118,11 @@ select {
 
 .container-search {
     display: flex;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: space-between;
     width: 50%;
     max-width: 40rem;
-    min-width: 20rem;
     border: 1px solid;
     height: 2.5rem;
     border-radius: 2rem;
@@ -161,6 +145,7 @@ select {
 
 #search-input {
     flex: 1;
+    width: 100%;
 }
 
 #search-button {
@@ -212,24 +197,21 @@ select {
         0 0 1rem var(--color-favorite), 0 0 1.5rem var(--color-favorite);
 }
 
-@media (max-width: 820px) {
-    .container-search button,
-    .header-title h1,
-    .link-favorites p {
-        display: none;
-    }
-}
-
 /*#endregion  */
 
 /*#region || Status and sorting row */
 
 .container-status-sort {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     margin: 2.5rem 0 4rem 0;
     font-size: 1.2rem;
+}
+.container-sort {
+    display: flex;
+    flex-direction: row;
 }
 
 .container-status {
@@ -534,7 +516,7 @@ footer a {
 
 .container-detail {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: 1fr 1fr;
     gap: 2rem 4rem;
     align-items: center;
 }
@@ -590,15 +572,6 @@ footer a {
     justify-content: space-between;
     padding-bottom: 1rem;
     border-bottom: 1px solid var(--color-disabled);
-}
-
-@media (max-width: 1200px) {
-    .detail-image {
-        height: auto;
-    }
-    .detail-info {
-        height: auto;
-    }
 }
 
 .detail-favorite span {
@@ -702,15 +675,18 @@ footer a {
     align-items: center;
 }
 
-.container-remove {
+.open-remove-dialog {
+    font-size: 1.2rem;
+    width: auto;
+    height: auto;
     display: flex;
-    gap: 1rem;
     align-items: center;
+    gap: 1rem;
     user-select: none;
     cursor: pointer;
 }
 
-.container-remove:hover span {
+.open-remove-dialog:hover span {
     text-shadow: 0 0 0.5rem var(--color-favorite),
         0 0 1rem var(--color-favorite), 0 0 1.5rem var(--color-favorite);
 }
@@ -722,7 +698,6 @@ by Hunter Garret.
 
 .slider {
     position: relative;
-    max-width: 60rem;
     margin: 2rem auto;
 }
 
@@ -812,3 +787,93 @@ by Hunter Garret.
     visibility: hidden;
 }
 /*#endregion  */
+
+/* #region || Media queries */
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --color-background: #101010;
+        --color-text: #b6b0b8;
+        --color-accent: #aa75ff;
+        --color-disabled: #555;
+    }
+    select option {
+        background-color: #333;
+    }
+    .header-title h1 {
+        font-weight: 600;
+        letter-spacing: 0.1rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .container-back {
+        margin-left: 2rem;
+    }
+    .detail-main {
+        padding: 0;
+    }
+    .container-detail {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .detail-image {
+        height: auto;
+    }
+    .detail-info {
+        height: auto;
+    }
+    .container-status-sort {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 2rem;
+    }
+
+    .container-status,
+    .container-sort {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+}
+
+@media (max-width: 820px) {
+    .container-search button,
+    .header-title h1,
+    .link-favorites p {
+        display: none;
+    }
+    main {
+        padding: 0;
+    }
+    .container-artworks.sorting {
+        grid-template-columns: auto;
+        padding: 2rem;
+    }
+    .container-artworks.sorting .image {
+        height: auto;
+    }
+    .favorite-button {
+        visibility: visible;
+    }
+    .container-favorites {
+        aspect-ratio: 1/2;
+        border: 0;
+        border-radius: 0;
+    }
+    .favorite-image {
+        height: 100%;
+    }
+}
+
+@media (max-width: 420px) {
+    .header-top {
+        padding: 0 1rem;
+    }
+    .container-search {
+        width: 14rem;
+    }
+}
+
+/* #endregion */
