--- a/css/style.css
+++ b/css/style.css
@@ -593,7 +593,7 @@ footer a {
 
 .container-landing {
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     position: relative;
     z-index: 1;
     display: grid;
